# clipbench

./: .gitignore  pyproject.toml
clipbench/: __init__.py  hexdump.py
clipbench/editors/: __init__.py  _base.py  _helpers.py  hex.py  html.py  plain_text.py
clipbench/processors/: __init__.py  _base.py  line.py
