[tool.poetry]
name = "clipbench"
version = "0.1.0"
description = ""
authors = ["no1xsyzy <mf20070535@126.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyQt5 = "^5.15.4"
chardet = "^4.0.0"
inflection = "^0.5.1"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]
PyQt5-stubs = "^5.15.2"
types-chardet = "^0.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
